--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,12 @@
 
 :root {
     --title-color: #322153;
+    --primary-color: #34cb79;
 }
 
 body {
     background: #f0f0f5;
+    -webkit-font-smoothing: antialiased;
 }
 
 a{
@@ -29,6 +31,11 @@ html {
     background: url("../images/home-background.svg") no-repeat;
     background-position: 35vw bottom;
 }
+@media (max-width: 900px) {
+    #page-home {
+        background-position-x: 70vw;
+    }
+}
 
 #page-home .content {
     width: 90%;
@@ -37,6 +44,12 @@ html {
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+@media (max-width: 900px) {
+    #page-home .content {
+        align-items: center;
+        text-align: center;
+    }
 }
 
 #page-home header {
@@ -50,6 +63,14 @@ html {
     display: flex;
     font-weight: 700;
     color: var(--title-color);
+}
+@media (max-width: 900px) {
+    #page-home header a {
+        position: absolute;
+        bottom: 48px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 #page-home header a span {
@@ -66,7 +87,57 @@ html {
     justify-content: center;
     flex: 1;
 }
+@media (max-width: 900px) {
+    #page-home main {
+        align-items: center;
+    }
+}
 
 #page-home main h1 {
     font-size: 64px;
+}
+
+#page-home main p {
+    font-size: 24px;
+    line-height: 38px;
+    margin-top: 24px;
+}
+
+#page-home main a {
+    width: 100%;
+    max-width: 360px;
+    height: 72px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    background-color: var(--primary-color);
+    transition: 400ms;
+    overflow: hidden;
+}
+
+#page-home main a:hover {
+    background-color: #2fb86e;
+}
+
+#page-home main a span {
+    width: 72px;
+    height: 72px;
+    background-color: rgba(0, 0, 0, 0.08);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#page-home main a span::after {
+    content: "";
+    background-image: url("../images/search.svg");
+    width: 20px;
+    height: 20px;
+}
+
+#page-home main a strong {
+    color: white;
+    flex: 1;
+    text-align: center;
 }
