--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
@@ -24,120 +25,4 @@ h1 {
 
 html {
     font-family: 'Roboto', sans-serif;
-}
-
-#page-home {
-    height: 100vh;
-    background: url("../images/home-background.svg") no-repeat;
-    background-position: 35vw bottom;
-}
-@media (max-width: 900px) {
-    #page-home {
-        background-position-x: 70vw;
-    }
-}
-
-#page-home .content {
-    width: 90%;
-    max-width: 1100px;
-    margin: 0 auto;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-@media (max-width: 900px) {
-    #page-home .content {
-        align-items: center;
-        text-align: center;
-    }
-}
-
-#page-home header {
-    margin-top: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#page-home header a {
-    display: flex;
-    font-weight: 700;
-    color: var(--title-color);
-}
-@media (max-width: 900px) {
-    #page-home header a {
-        position: absolute;
-        bottom: 48px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-}
-
-#page-home header a span {
-    margin-right: 16px;
-    background-image: url("../images/log-in.svg");
-    width: 20px;
-    height: 20px;
-}
-
-#page-home main {
-    max-width: 560px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1;
-}
-@media (max-width: 900px) {
-    #page-home main {
-        align-items: center;
-    }
-}
-
-#page-home main h1 {
-    font-size: 64px;
-}
-
-#page-home main p {
-    font-size: 24px;
-    line-height: 38px;
-    margin-top: 24px;
-}
-
-#page-home main a {
-    width: 100%;
-    max-width: 360px;
-    height: 72px;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    margin-top: 40px;
-    background-color: var(--primary-color);
-    transition: 400ms;
-    overflow: hidden;
-}
-
-#page-home main a:hover {
-    background-color: #2fb86e;
-}
-
-#page-home main a span {
-    width: 72px;
-    height: 72px;
-    background-color: rgba(0, 0, 0, 0.08);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#page-home main a span::after {
-    content: "";
-    background-image: url("../images/search.svg");
-    width: 20px;
-    height: 20px;
-}
-
-#page-home main a strong {
-    color: white;
-    flex: 1;
-    text-align: center;
 }
