--- a/css/create-point.css
+++ b/css/create-point.css
@@ -33,3 +33,72 @@
     border-radius: 8px;
     max-width: 730px;
 }
+
+#page-create-point form h1 {
+    font-size: 36px;
+}
+
+#page-create-point form fieldset {
+    margin-top: 64px;
+    border: 0;
+}
+
+#page-create-point form fieldset legend {
+    margin-bottom: 40px;
+}
+
+#page-create-point form fieldset legend h2 {
+    font-size: 24px;
+}
+
+#page-create-point form fieldset .field {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 24px;
+}
+
+#page-create-point form fieldset .field-group {
+    display: flex;
+}
+
+#page-create-point form fieldset .field input,
+#page-create-point form fieldset .field select {
+    background-color: #f0f0f5;
+    border: 0;
+    padding: 16px 24px;
+    font-size: 16px;
+    outline: none;
+    border-radius: 8px;
+}
+
+#page-create-point form fieldset .field select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+#page-create-point form fieldset .field label {
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+#page-create-point form fieldset .field-group .field + .field {
+    margin-left: 24px;
+}
+
+#page-create-point form button {
+    width: 260px;
+    height: 56px;
+    background-color: var(--primary-color);
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    margin-top: 40px;
+    transition: 400ms;
+}
+#page-create-point form button:hover {
+    background-color: #2fb86e;
+}
